# The-System

./: .gitignore  README.md  package.json
apps/client/: .eslintrc.cjs  index.html  package.json
apps/client/src/: main.tsx
apps/client/src/components/: Panel.css  Panel.tsx  ProgressBar.css  ProgressBar.tsx  QuestCard.css  QuestCard.tsx  RewardChoice.css  RewardChoice.tsx  SkillTree.css  SkillTree.tsx  StatBadge.css  StatBadge.tsx
apps/client/src/hooks/: useApi.ts  useAuth.ts
apps/client/src/pages/: App.css  App.tsx
apps/client/src/styles/: index.css
apps/server/: .env.example  package.json
apps/server/prisma/: schema.prisma  seed.ts
apps/server/src/: index.ts  instrumentation.ts  server.ts
apps/server/src/domain/: leveling.ts  quests.ts
apps/server/src/utils/: auth.ts
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  analytics.py  auth.py  inventory.py  players.py  quests.py  shop.py  skills.py
backend/app/services/: progression.py  quests.py
backend/app/utils/: leveling.py  security.py
backend/tests/: test_daily_quest.py
docs/: ARCHITECTURE.md
frontend/: index.html  package.json  tailwind.config.cjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnalyticsCard.tsx  ExperienceBar.tsx  LoginPanel.tsx  QuestCard.tsx  StatCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAnalytics.ts  usePlayerData.ts  useQuests.ts
frontend/src/utils/: leveling.ts
infrastructure/: README.md
(+11 files in other folders)
